--- a/index.html
+++ b/index.html
@@ -2583,7 +2583,7 @@ function setupAutosave() {
 				base: 'vs-dark',
 				inherit: true,
 				colors: {
-					"editor.background": '#141414', //ur background color
+					"editor.background": '#0F0F0F', //ur background color
 				},
 				rules: [{
 						token: 'global',
