--- a/index.html
+++ b/index.html
@@ -2225,7 +2225,7 @@
 <body>
   <div class="editor-container">
       <div id="tabs-container" class="tabs-container"></div>
-      <div id="container" style="width:100%;height:calc(100% - 0px);"></div>
+      <div id="container" style="width:100%;height:calc(100% + 4px);"></div>
   </div>
   <style>
       .editor-container {
