--- a/WithTabs.html
+++ b/WithTabs.html
@@ -2225,7 +2225,7 @@
 <body>
   <div class="editor-container">
       <div id="tabs-container" class="tabs-container"></div>
-      <div id="container" style="width:100%;height:calc(100% + 4px);"></div>
+      <div id="container" style="width:100%;height:calc(100% - 24px);"></div>
   </div>
   <style>
       .editor-container {
@@ -2237,7 +2237,7 @@
       .tabs-container {
           background-color: #141414;
           display: flex;
-          height: 0px;
+          height: 25px;
           overflow-x: auto;
           border-bottom: 1px solid #333;
           gap: 0;
